test/semantic-errors/16.pas
program p;
procedure f();
begin writeln(1)end;
begin writeln(f)end.
